# chatmind

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND_PLAN.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  api_test_results.json  demo_auto_tagging.py  demo_cost_tracking.py  demo_data_lake.py  demo_incremental.py  demo_semantic_chunking.py  demo_tag_filtering.py  demo_url_mapping.py  docker-compose.yml  env.example  hash_file_audit.md  hash_mapping_analysis.md  hybrid_db_test_results.json  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  test_hash_matching.py  test_multiprocessing.py  test_overlapping_exports.py  test_results.json
.github/: README.md  config.yml  pull_request_template.md
demos/: README.md  demo_cost_tracking.py  demo_data_lake.py
docs/: AI_ENTRY_POINT.md  API_DOCUMENTATION.md  DB_QUERY_GUIDE.md  DUAL_LAYER_GRAPH_STRATEGY.md  DUAL_LAYER_GRAPH_STRATEGY_AND_IMPLEMENTATION.md  DUAL_LAYER_IMPLEMENTATION_SUMMARY.md  ENHANCED_TAGGING_SYSTEM.md  INCREMENTAL_PROCESSING.md  LOCAL_MODEL_SETUP.md  NEO4J_QUERY_GUIDE.md  NEO4J_QUICK_REFERENCE.md  PIPELINE_OVERVIEW.md  PIPELINE_OVERVIEW_AND_INCREMENTAL.md  README.md  ROADMAP.md  UserGuide.md  mindmap_graph_plan.md
scripts/: README.md  analyze_tag_distribution.py  check_pipeline_dependencies.py  debug_cluster_ids.py  extract_tags.py  fetch_conversation.py  generate_sample_data.py  investigate_conversation_chunking.py  quality_test_results.json  representative_tag_analysis.py  run_all_quality_tests.py  setup.py  (+20 more)
(+190 files in other folders)
