[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmind"
version = "0.1.0"
description = "ChatMind: Hybrid Neo4j+Qdrant pipeline, API, and frontend"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["neo4j", "qdrant", "llm", "pipeline", "embedding", "graph"]
license = { text = "Apache-2.0" }
authors = [
  { name = "ChatMind Contributors" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
chatmind = "chatmind.pipeline.run_pipeline:main" 